<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".custommatcher.CofferPreparationActivity">

    <EditText
        android:id="@+id/et_coffee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/coffee_hint" />

    <Button
        android:id="@+id/btn_validate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Validate" />

    <TextView
        android:id="@+id/tv_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Good choice" />

    <TextView
        android:id="@+id/tv_fail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Bad choice" />

</LinearLayout>