<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_typed_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!" />

    <EditText
        android:id="@+id/et_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_show_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Show text" />

    <Button
        android:id="@+id/btn_start_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Start new Activity" />

</LinearLayout>